# linux-wallpaperengine

./: .gitignore  .gitmodules  Cargo.toml  DEV.md  README.md
docs/modules/: adapters.md  loader.md  overview.md  pkg-parser.md  post-processor.md  renderer-passes.md  renderer.md
packaging/arch/: PKGBUILD
src/: lib.rs  main.rs  scene.rs
src/pkg_parser/: .gitignore  Cargo.toml  README.md
src/pkg_parser/src/: lib.rs
src/pkg_parser/src/pkg_parser/: README.md  mod.rs  parser.rs  tex_parser.rs
src/scene/: camera.rs  mod.rs  render.rs  render_tex.rs
src/scene/adapters/: mod.rs  winit.rs  winit_adapter.rs  wlr_app.rs  wlr_layer_shell_adapter.rs
src/scene/adapters/wlr_app/: mod.rs  scale.rs
src/scene/loader/: assets_loader.rs  camera.rs  mod.rs  model.rs  models.rs  object.rs  object_loader.rs  scene.rs  scene_loader.rs
src/scene/renderer/: app.rs  bindgroup.rs  bindgroups.rs  buffer.rs  draw.rs  effect_bindgroup.rs  intermediate_pass.rs  load.rs  load_object.rs  mod.rs  object.rs  ping_pong.rs  post_process.rs  projection.rs  render.rs  render_pass.rs  surface.rs  vertex.rs
src/scene/renderer/post_processor/: effect_param.rs  effect_step.rs  mod.rs  pipeline_handler.rs  pipeline_helpers.rs  renderer.rs  shader_compiler.rs  shader_header.rs  shader_layout.rs  shader_preprocessor.rs  shader_replace.rs  shader_transform.rs
src/scene/renderer/post_processor/shader_headers/: blur_k3.frag  blur_k3.vert  ccsimple.frag  chroma4.frag  chroma4.vert  clippingmaskimage4.frag  clippingmaskimage4.vert  combine_hdr.frag  common.h  common_blending.h  common_blur.h  common_composite.h  common_fog.h  common_foliage.h  common_fragment.h  common_particles.h  common_pbr.h  common_pbr_2.h  common_perspective.h  common_vertex.h  declarations.json  downsample_quarter.frag  downsample_quarter.vert  downsample_quarter_bloom.frag  effectcomposebackground.vert  flat.frag  flat.vert  flatpoint.frag  flatpoint.geom  flatpoint.vert  foliage4.frag  foliage4.vert  font.frag  fur4.frag  fur4.vert  generic2.frag  generic2.vert  generic3.frag  generic3.vert  generic4.frag  (+26 more)
src/scene/renderer/post_processor/transform/: layout.rs  mod.rs  replace.rs
src/scene/renderer/shader/: image.wgsl
src/scene/renderer/video_renderer/: bindgroup.rs  ffmpeg_decode.rs  mod.rs  vk_decode.rs
src/scene/renderer/video_renderer/shader/: video.wgsl
src/scene/shader/: image.wgsl
src/scene/winit/: winit.rs
(+2 files in other folders)
