[package]
name = "linux-wallpaper-engine"
version = "0.1.0"
edition = "2024"
description = "Yet another linux wallpaper engine"

[dependencies]
bytemuck = "1.25.0"
clap = { version = "4.5.58", features = ["derive"] }
depkg = "1.1.1"
glam = "0.31.0"
indicatif = "0.18.3"
pollster = "0.4.0"
rodio = { version = "0.21.1" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
wayland-protocols = "0.32.10"
wayland-protocols-wlr = "0.3.10"
wgpu = "28.0.0"
winit = "0.30.12"

[profile.release]
debug = false
lto = "thin"
codegen-units = 1
