[package]
name = "linux-wallpaper-engine"
version = "0.1.0"
edition = "2024"
description = "Yet another linux wallpaper engine"

[dependencies]
bytemuck = "1.25.0"
calloop = "0.14.4"
clap = { version = "4.5.58", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
pkg_parser = { path = "src/pkg_parser" }
glam = "0.31.0"
indicatif = "0.18.3"
pollster = "0.4.0"
raw-window-handle = "0.6.2"
rodio = { version = "0.21.1", default-features = false, features = [
  "lewton",
  "playback",
  "symphonia-all"
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
smithay-client-toolkit = "0.20.0"
wayland-client = "0.31.12"
wayland-protocols = { version = "0.32", features = ["client", "staging"] }
wgpu = { version = "28.0.0", features = ["glsl"] }
winit = "0.30.12"

[profile.release]
debug = false
strip = true
lto = "thin"
panic = "abort"
codegen-units = 1
